--- a/app/src/main/res/layout/case_ov_warning_listview_itemview.xml
+++ b/app/src/main/res/layout/case_ov_warning_listview_itemview.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
         <LinearLayout
             android:layout_width="99dp"
             android:layout_height="match_parent"
