--- a/app/src/main/res/layout/task_case_information_content.xml
+++ b/app/src/main/res/layout/task_case_information_content.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/task_case_information_height"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="0dp"
