--- a/app/src/main/res/layout/warning_list_container_layout.xml
+++ b/app/src/main/res/layout/warning_list_container_layout.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/warning_bg">
-    <HorizontalScrollView
-        android:layout_width="wrap_content" android:layout_height="wrap_content">
-        <LinearLayout
-            android:id="@+id/warning_list_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/ov_warning_margin_horizontal"/>
-    </HorizontalScrollView>
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/warning_list_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/ov_warning_margin_horizontal"/>
+</HorizontalScrollView>
