--- a/app/src/main/res/layout/worker_record.xml
+++ b/app/src/main/res/layout/worker_record.xml
@@ -65,8 +65,10 @@
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="169dp"
-        android:layout_height="169dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxWidth="169dp"
+        android:maxHeight="109dp"
         android:layout_marginLeft="71dp"
         android:layout_marginTop="48dp"
         android:visibility="gone"/>
