--- a/app/src/main/res/layout/ov_taskitem_list_view_itemview_worker.xml
+++ b/app/src/main/res/layout/ov_taskitem_list_view_itemview_worker.xml
@@ -13,45 +13,63 @@
         android:baselineAligned="false">
 
         <LinearLayout
-            android:layout_width="40dp"
+            android:layout_width="72dp"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_id"
+                android:id="@+id/start_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/case_overview_listview_taskitem_header_id"
+                android:text="@string/ov_taskItem_listView_start_date"
                 android:textColor="@color/black1"
-                android:textSize="16sp" />
+                android:textSize="14dp" />
         </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="109dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_status"
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                android:text="@string/case_overview_listview_taskitem_header_status"
-                android:textSize="14sp" />
+                android:text="@string/worker_ov_taskItem_listView_status"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
 
         <LinearLayout
-            android:layout_width="115dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_name"
+                android:id="@+id/case_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/case_overview_listview_taskitem_header_name"
-                android:textSize="16sp" />
+                android:text="@string/worker_ov_taskItem_listView_case_name"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+        <include layout="@layout/ov_listview_vertical_divider"/>
+
+        <LinearLayout
+            android:layout_width="113dp"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/worker_ov_taskItem_listView_item_name"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
@@ -60,12 +78,13 @@
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_expected_time"
+                android:id="@+id/expected_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/case_overview_listview_taskitem_header_expect_time"
-                android:textSize="16sp" />
+                android:text="@string/worker_ov_taskItem_listView_expected_time"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
@@ -74,12 +93,13 @@
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_work_time"
+                android:id="@+id/work_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/case_overview_listview_taskitem_header_work_time"
-                android:textSize="16sp" />
+                android:text="@string/worker_ov_taskItem_listView_working_time"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
@@ -88,50 +108,29 @@
             android:layout_width="110dp"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_work_tool"
+                android:id="@+id/equipment_used"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/case_overview_listview_taskitem_header_tool"
-                android:textSize="14sp" />
+                android:text="@string/worker_ov_taskItem_listView_tool_used"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
 
-        <RelativeLayout
-            android:layout_width="119dp"
-            android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
             <TextView
-                android:id="@+id/taskitem_listview_worker_name_string"
+                android:id="@+id/error_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:singleLine="true"
-                android:text="@string/case_overview_listview_taskitem_header_resposible_worker"
-                android:textSize="14sp"
-                android:visibility="gone" />
-            <LinearLayout
-                android:id="@+id/taskitem_listview_worker_info"
-                android:layout_width="119dp"
-                android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="15.4dp"
-                android:gravity="center_vertical">
-                <ImageView
-                    android:id="@+id/taskitem_listview_worker_avator"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp" />
-                <TextView
-                    android:id="@+id/taskitem_listview_worker_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:singleLine="true"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </RelativeLayout>
+                android:text="@string/worker_ov_taskItem_listView_error_count"
+                android:textSize="14dp" />
+        </LinearLayout>
 
         <include layout="@layout/ov_listview_vertical_divider"/>
 
@@ -140,10 +139,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
-            <include layout="@layout/warning_textview_layout"/>
+
+            <TextView
+                android:id="@+id/warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal"
+                android:padding="8dp"
+                android:text="@string/worker_ov_taskItem_listView_warning"
+                android:textSize="14dp" />
         </RelativeLayout>
+
     </LinearLayout>
-
     <include layout="@layout/ov_listview_horizontal_divider"/>
-
 </LinearLayout>
