--- a/app/src/main/res/layout/add_case_add_item.xml
+++ b/app/src/main/res/layout/add_case_add_item.xml
@@ -9,12 +9,9 @@
     android:elevation="@dimen/add_case_task_item_elevation"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/add_case_add_button"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
-        android:textStyle="bold"
-        android:textSize="50dp"/>
+        android:src="@drawable/add_task"/>
 
 </LinearLayout>
