--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,4 +19,17 @@
         <attr name="el_duration" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="TitleEditText">
+        <attr name="tet_title" format="string" />
+        <attr name="tet_contentHint" format="string" />
+        <attr name="tet_contentInputType" format="enum">
+            <enum name="none" value="0" />
+            <enum name="text" value="1" />
+            <enum name="number" value="2" />
+        </attr>
+        <attr name="tet_contentMinLines" format="integer" />
+        <attr name="tet_contentSingleLine" format="boolean" />
+        <attr name="tet_contentBackground" format="reference" />
+    </declare-styleable>
+
 </resources>
