--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,13 @@
     <color name="main_window_divider_color">#FFF5F5F5</color>
     <color name="common_block_stroke_color">#FFE1E1E1</color>
 
+    <!-- Views -->
+    <color name="button_white_text_color">@android:color/white</color>
+    <color name="button_black_text_color">@android:color/black</color>
+    <color name="blue_button_background_color">#FF428BCA</color>
+    <color name="green_button_background_color">#FF5CB85C</color>
+    <color name="title_edit_text_text_color">#FF4A4A4A</color>
+
     <!-- Common used -->
     <color name="red">#d9534f</color>
     <color name="gray1">#9b9b9b</color>
